# citation-sync

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  action.yml  pyproject.toml
.github/workflows/: release.yml  sync-citation.yml  test.yml
examples/workflows/: manual-sync.yml  pr-check.yml  python-publish.yml  release-sync.yml
src/: requirements.txt  sync_citation.py
tests/: __init__.py
tests/fixtures/: sample_citation.cff  sample_pyproject.toml
tests/integration/: test_end_to_end.py
tests/unit/: test_conflict_resolution.py  test_edge_cases.py  test_schema_mapping.py  test_transforms.py
