# GitHub Action Dependencies
# This file manages dependencies for the citation-sync GitHub Action

[project]
name = "citation-sync"
version = "0.3.0"
description = "A GitHub Action that automatically synchronizes Citation File Format (CFF) files with PEP 621 metadata from pyproject.toml"
authors = [
    {name = "Gaurav Sood", email = "gsood07@gmail.com"}
]
requires-python = ">=3.11"
keywords = ["github-action", "citation", "cff", "metadata", "academic"]
license = {text = "MIT"}

[project.urls]
Homepage = "https://github.com/recite/citation-sync"
Repository = "https://github.com/recite/citation-sync"
Documentation = "https://github.com/recite/citation-sync#readme"
"Bug Reports" = "https://github.com/recite/citation-sync/issues"
dependencies = [
    "PyYAML>=6.0",
    "jsonschema>=4.17.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
    "tomli-w>=1.0.0"
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]